# maturin-import-hook

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  Changelog.md  Code-of-Conduct.md  Contributing.md  MANIFEST.in  README.md  license-apache  license-mit  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: advanced.md  basics.md  reloading.md
guide/src/: local_development.md
old_tests/: run.rs
old_tests/import_hook/: common.py  test_rust_file_importer.py
src/maturin_import_hook/: __init__.py  __main__.py  _building.py  _common.py  _logging.py  _resolve_project.py  _site.py  error.py  project_importer.py  rust_file_importer.py  settings.py
tests/: README.md  create_benchmark_data.py  maturin  requirements.txt  resolved.json  run.rs  runner.py
tests/import_hook/: common.py  conftest.py  test_project_importer.py  test_utilities.py
tests/package_resolver/: Cargo.toml  README.md
tests/package_resolver/src/: main.rs
tests/reference/reloading/: README.md  c_module.c  extension_module_properties.py
tests/test_import_hook/: common.py  conftest.py  test_project_importer.py  test_rust_file_importer.py  test_site.py  test_utilities.py  venv.py
tests/test_import_hook/file_importer_helpers/: logging_helper.py  logging_reload_helper.py  low_resolution_mtime_helper.py  multiple_import_helper.py  my_script_1.rs  my_script_2.rs  my_script_3.rs  rebuild_on_change_helper.py  rebuild_on_settings_change_helper.py  reload_helper.py  reload_template.rs
tests/test_import_hook/project_importer_helpers/: logging_helper.py  logging_reload_helper.py  low_resolution_mtime_helper.py  my_project.rs  rebuild_on_settings_change_helper.py  reload_helper.py  reload_template.rs
tests/test_import_hook/project_importer_helpers/blank-project/: Cargo.toml
tests/test_import_hook/project_importer_helpers/blank-project/src/: lib.rs
tests/test_import_hook/rust_file_import/: absolute_import_helper.py  concurrent_import_helper.py  rebuild_on_settings_change_helper.py  relative_import_helper.py
